--- a/BSiNS/Src/EditorState/App.editorstate.json
+++ b/BSiNS/Src/EditorState/App.editorstate.json
@@ -71,7 +71,7 @@
         {
           "Category": "OnDemandData",
           "PropertyName": "StartScreen",
-          "RuleProviderType": "Unknown"
+          "RuleProviderType": "User"
         },
         {
           "Category": "Formulas",
