--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -291,6 +291,8 @@
             FillPortions: =1
             FontColor: =
             Height: =200
+            LayoutMinHeight: =200
+            LayoutMinWidth: =200
             SpinnerSize: ='Spinner.SpinnerSize'.Huge
             Visible: =isLoading
             Width: =200
