--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -233,6 +233,7 @@
                         txt_FileType As Text:
                             AutoHeight: =true
                             DisplayMode: =DisplayMode.Edit
+                            FontColor: =
                             Height: =32
                             LayoutMinHeight: =32
                             LayoutMinWidth: =96
