--- a/BSiNS/pkgs/PcfConversions/PowerApps_CoreControls_CheckboxCanvas.json
+++ b/BSiNS/pkgs/PcfConversions/PowerApps_CoreControls_CheckboxCanvas.json
@@ -83,7 +83,17 @@
       ],
       "From": "0.0.19",
       "To": "0.0.20"
+    },
+    {
+      "Action": [
+        {
+          "Name": "CheckboxSize",
+          "Type": "add"
+        }
+      ],
+      "From": "0.0.22",
+      "To": "0.0.23"
     }
   ],
-  "Version": "0.0.21"
+  "Version": "0.0.23"
 }
