--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -139,7 +139,6 @@
     "scr_XMLNalogZaProdaju",
     "scr_XMLOtpremnice",
     "scr_XMLPrimke",
-    "scr_XMLTemeljniceInventure",
-    "Screen2"
+    "scr_XMLTemeljniceInventure"
   ]
 }
