--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -1,7 +1,7 @@
 "scr_XMLNabavniNalog As screen.'autoLayout_HeaderFooter_ver1.0'":
     Fill: =RGBA(234, 83, 109, 1)
     LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
-    OnVisible: |
+    OnVisible: |+
         =Set(isLoading, true);
         
         Reset(nabavniNalogReadyForNavCheckbox);
@@ -43,6 +43,8 @@
         );
         
         Set(isLoading, false);
+        UpdateContext({wizardStep:1});
+        
 
     NabavniNalogScreenContainer As groupContainer.verticalAutoLayoutContainer:
         DropShadow: =DropShadow.Light
@@ -95,9 +97,10 @@
             Y: =15
             ZIndex: =2
 
-            PurchaseCanvas As fluidGrid.fluidGridWithBlankCard:
+            PurchaseLinesCanvas As fluidGrid.fluidGridWithBlankCard:
                 BorderThickness: =0
                 Height: =677
+                Visible: =wizardStep = 1
                 Width: =Parent.Width
                 ZIndex: =28
 
@@ -206,6 +209,8 @@
                         Items: =colPurchaseLines
                         Layout: =Layout.Vertical
                         LoadingSpinner: =LoadingSpinner.Data
+                        OnSelect: |-
+                            =UpdateContext({wizardStep:2});
                         TemplatePadding: =0
                         TemplateSize: =266
                         Width: =Parent.Width
@@ -431,6 +436,267 @@
                                 ZIndex: =11
 
                     Label2 As label:
+                        BorderColor: =RGBA(89, 0, 0, 1)
+                        Color: =RGBA(0, 0, 0, 1)
+                        DisabledColor: =RGBA(166, 166, 166, 1)
+                        Height: =24
+                        Size: =12
+                        Text: ="Stavke nabavke"
+                        Width: =Parent.Width
+                        Y: =10
+                        ZIndex: =3
+
+            PurchaseResEntryCanvas As fluidGrid.fluidGridWithBlankCard:
+                BorderThickness: =0
+                Height: =611
+                Visible: =wizardStep = 2
+                Width: =Parent.Width
+                ZIndex: =29
+
+                PurchaseResEntry As dataCard.blankCard:
+                    BorderColor: =RGBA(0, 0, 0, 1)
+                    BorderStyle: =BorderStyle.Solid
+                    DisplayMode: =DisplayMode.Edit
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =757
+                    Width: =Parent.Width
+                    X: =0
+                    Y: =1
+                    ZIndex: =2
+
+                    "NabavniNalogLines_1 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
+                        BorderColor: =RGBA(89, 0, 0, 1)
+                        DelayItemLoading: =true
+                        Fill: =RGBA(237, 237, 237, 1)
+                        Height: =708
+                        Items: =colPurchaseLines
+                        Layout: =Layout.Vertical
+                        LoadingSpinner: =LoadingSpinner.Data
+                        TemplatePadding: =0
+                        TemplateSize: =266
+                        Width: =Parent.Width
+                        Y: =49
+                        ZIndex: =1
+
+                        NextArrow5_1 As icon.ChevronRight:
+                            AccessibleLabel: =Self.Tooltip
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            Color: =RGBA(166, 166, 166, 1)
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(244, 244, 244, 1)
+                            Height: =50
+                            Icon: =Icon.ChevronRight
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =16
+                            PaddingLeft: =16
+                            PaddingRight: =16
+                            PaddingTop: =16
+                            Tooltip: ="View item details"
+                            Width: =50
+                            X: =Parent.TemplateWidth - Self.Width - 12
+                            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
+                            ZIndex: =4
+
+                        Separator6_1 As rectangle:
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            Fill: =RGBA(255, 255, 255, 1)
+                            Height: =8
+                            OnSelect: =Select(Parent)
+                            Width: =Parent.TemplateWidth
+                            Y: =Parent.TemplateHeight - Self.Height
+                            ZIndex: =5
+
+                        Rectangle5_1 As rectangle:
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            Fill: =RGBA(89, 0, 0, 1)
+                            Height: =Parent.TemplateHeight - Separator6_1.Height
+                            OnSelect: =Select(Parent)
+                            Visible: =ThisItem.IsSelected
+                            Width: =4
+                            ZIndex: =6
+
+                        Icon1_1 As icon.Reset:
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            Color: =RGBA(89, 0, 0, 1)
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(244, 244, 244, 1)
+                            Height: =50
+                            Icon: =Icon.Reset
+                            OnSelect: =Reset(NabavniNalogQty_1)
+                            PaddingBottom: =16
+                            PaddingLeft: =16
+                            PaddingRight: =16
+                            PaddingTop: =16
+                            Width: =50
+                            X: =Parent.TemplateWidth - Self.Width - 50
+                            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
+                            ZIndex: =13
+
+                        Group2_1 As group:
+                            Height: =5
+                            Width: =5
+                            X: =40
+                            Y: =40
+                            ZIndex: =14
+
+                            Title5_1 As label:
+                                Color: =RGBA(50, 49, 48, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =Self.Size * 1.8
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Br. artikla:   " & ThisItem.Item_No
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Parent.TemplateWidth - 86
+                                X: =24
+                                Y: =18
+                                ZIndex: =1
+
+                            Subtitle4_1 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =Self.Size * 1.8
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Kategorija artikla:   " & ThisItem.Posting_Group
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Title5_1.Width
+                                X: =24
+                                Y: =52
+                                ZIndex: =2
+
+                            Body1_6 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =18
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Količina:    "
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =88
+                                X: =24
+                                Y: =121
+                                ZIndex: =3
+
+                            Body1_8 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =Self.Size * 1.8
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Jedinica mjere:    " & ThisItem.Document_No
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Title5_1.Width
+                                X: =24
+                                Y: =187
+                                ZIndex: =7
+
+                            Body1_7 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =Self.Size * 1.8
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Rok trajanja:    " & ThisItem.Exp_Date
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Title5_1.Width
+                                X: =24
+                                Y: =154
+                                ZIndex: =8
+
+                            Body1_9 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =Self.Size * 1.8
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="LOT:    " & ThisItem.LOT_No
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Title5_1.Width
+                                X: =24
+                                Y: =223
+                                ZIndex: =9
+
+                            Body1_5 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =Self.Size * 1.8
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Naziv artikla:   " & ThisItem.Description
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Title5_1.Width
+                                X: =24
+                                Y: =87
+                                ZIndex: =10
+
+                            "NabavniNalogQty_1 As 'Text input'":
+                                Align: ='TextInputCanvas.Align'.Start
+                                Appearance: ="FilledDarker"
+                                BasePaletteColor: =
+                                BorderColor: =""
+                                BorderStyle: =""
+                                DelayOutput: =true
+                                DisabledBorderColor: =""
+                                DisplayMode: =DisplayMode.Edit
+                                Fill: =
+                                FocusedBorderColor: =""
+                                FontColor: =
+                                FontSize: =15
+                                Height: =31
+                                HoverBorderColor: =""
+                                OnChange: |-
+                                    =UpdateIf(colTempPurchaseLines, NabavniNalogLines_1.Selected.Item_No = ThisRecord.Item_No ,{Quantity: Value(NabavniNalogQty_1.Value)})
+                                PressedBorderColor: =""
+                                Value: =ThisItem.Quantity
+                                Width: =113
+                                X: =112
+                                Y: =115
+                                ZIndex: =11
+
+                    Label2_1 As label:
                         BorderColor: =RGBA(89, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
